# pycodon

./: .gitignore  LICENSE  README.md  main.py  practice.ipynb  proteins.txt  pyproject.toml  reserve_functions.py  setup.py  tasks.md  to_git_stepanyuk.py
codon/: __init__.py  codon.py  codon_dict.py  frames.py  metasequence.py  sequence.py  utils.py
codon/metasequence/: __init__.py
codon/sequence/: __init__.py  utils.py
data/: Sequence1.txt  Sequence1_2.txt  Sequence1_3.txt  Sequence1_4.txt  Sequence4.txt  Sequence5.txt  sequence_6.fa
pycodon/: __init__.py  codon_dict.py  utils.py
pycodon/metasequence/: __init__.py  utils.py
pycodon/sequence/: __init__.py  utils.py
scripts/: practice.ipynb  test.py
scripts/data/: Sequence1_1.txt  Sequence2.txt  Sequence3.txt
