[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pycodon"
authors = [{name = "[Dmitriy Zanadvornykh, Daria Malakhova, Evgenia Tikeeva]", email = "tikeeva_es@mail.ru"}]
readme = "README.md"
python = "^3.8"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/tikeeva/pycodon"
